--- a/client/src/App.css
+++ b/client/src/App.css
@@ -7,8 +7,7 @@
 
 .home,
 .services,
-.products,
-.sign-up {
+.products {
   display: flex;
   height: 90vh;
   align-items: center;
@@ -37,11 +36,13 @@
 }
 
 .sign-up {
+  /*
   background-image: url("../public/images/alp2.jpg");
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
   color: #fff;
   font-size: 100px;
-  box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.2);
+  box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.2); */
+  font-size: 50px;
 }
